Fixing a bug with overflow

--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -15,6 +15,10 @@ h2 { font-size:18px; }
 h3 { font-size:16px; }
 p { font-size:14px; }
 
+body:not(.printmode) {
+	overflow: hidden;
+}
+
 .wrapper 
 {
 	background-color: #F8F8F8;
@@ -25,7 +29,8 @@ p { font-size:14px; }
 	overflow:auto;
 	text-align:initial;
 	width:100%;
-	box-shadow:-15px 0px 10px -15px #444444 inset;
+	box-shadow: 0px 6px 7px 2px #444444 inset;
+	// box-shadow:-15px 0px 10px -15px #444444 inset;
 }
 
 /* 
@@ -169,7 +174,7 @@ p {
 	.sectionContent, .experienceDetails {
 		pointer-events: none;
 	}
-	
+
 	body {
 		background-color: white;
 	}
@@ -321,7 +326,11 @@ p {
 	#printmode();
 
 	.printToggle {
-		display: none;
+		display: none !important;
+	}
+	
+	body {
+		overflow: auto;
 	}
 }
 
